# code-challenge-ganho-de-capital

./: .gitignore  Dockerfile  README.md  input.txt  pyproject.toml
input_examples/: input_02.txt  input_08.txt  input_09.txt
src/: main.py
src/adapters/input/: json_parser.py
src/adapters/output/: json_formatter.py
src/application/: container.py
src/application/cli/: main.py
src/application/use_cases/: calcular_impostos_use_case.py
src/domain/exceptions/: parse_error.py
src/domain/models/: investimento.py  operacao.py
src/domain/ports/input/: operacoes_input_port.py
src/domain/ports/output/: impostos_output_port.py
src/domain/ports/services/: calcular_imposto_service_port.py
src/domain/services/: calcular_imposto_service.py
tests/: conftest.py
tests/integration/: test_capital_gain.py
tests/unit/: test_calcular_imposto_service.py  test_investimento.py  test_json_formatter.py  test_json_parser.py  test_main.py  test_operacao.py  test_parse_error.py
