[project]
name = "code-challenge-ganho-de-capital"
version = "0.1.0"
description = "Code Challenge: Ganho de Capital - Nubank"
authors = [
    {name = "Your Name"}
]
readme = "README.md"
requires-python = "^3.13.2"

[tool.poetry.dependencies]
python = "^3.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
mypy = "^1.15.0"
pylint = "^3.3.6"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | venv
)/
'''
include = '\.pyi?$'
line-length = 119
skip-string-normalization = false


[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src" 

[tool.isort]
force_sort_within_sections = true
line_length = 119
profile = "black"
skip_gitignore = true