[project]
name = "code-challenge-ganho-de-capital"
version = "0.1.0"
description = "Code Challenge: Ganho de Capital - Nubank"
authors = [
    {name = "Your Name"}
]
readme = "README.md"
requires-python = ">=3.13.2"

[tool.poetry]
name = "code-challenge-ganho-de-capital"
version = "0.1.0"
description = "Code Challenge: Ganho de Capital - Nubank"
authors = ["Your Name"]
packages = [{include = "src"}]
package-mode = true

[tool.poetry.dependencies]
python = ">=3.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | venv
)/
'''
include = '\.pyi?$'
line-length = 119
skip-string-normalization = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src" 

[tool.isort]
force_sort_within_sections = true
line_length = 119
profile = "black"
skip_gitignore = true